# nakavid

./: .env.example  .gitignore  AGENTS.md  Caddyfile  LICENSE  README.md  charter.md  docker-compose.yml  flake.nix  nakavid-prd.md  pyproject.toml
.github/workflows/: ci.yml
apps/pipeline/: combine_export.py  enqueue.py  extraction.py  handlers.py  job_queue.py  models.py  probe.py  scoring.py  worker.py
apps/pipeline/management/commands/: run_worker.py
apps/pipeline/migrations/: 0001_initial.py  0002_seed_default_scoring_params.py  0003_probe_stage_metadata.py  0004_scoring_silence_params.py  0005_scoringparams_smoothing_window_count.py  0006_job_combine_export.py
config/: settings.py  urls.py
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/islands/drag-combine/: drag-combine.css  drag-combine.tsx  main.tsx  types.ts
frontend/src/islands/timeline-scrub/: clip-segment.tsx  main.tsx  types.ts  (+2 more)
static/islands/: drag-combine.js  timeline-scrub.js
static/islands/.vite/: manifest.json
static/islands/assets/: drag-combine.css  timeline-scrub.css
static/islands/chunks/: cn-D6cyFGxv.js
templates/registration/: login.html
tests/: test_auth.py  test_bulk_tagging.py  test_clip_extraction.py  test_clips_browser.py  test_combine_builder.py  test_combine_export.py  test_healthcheck.py  test_job_queue_worker.py  test_lesson_view.py  test_probe_stage.py  test_queue_status.py  test_schema.py  test_segment_scoring.py  test_smoke.py  test_source_videos_library.py  test_tag_manager.py  test_type_a_ingest.py  test_type_b_ingest.py
